# melodi-sdk-python

./: .gitignore  README.md  pyproject.toml  readme.md  requirements.txt  run_test_responses.py  script_async.py  script_jupyter.py  setup.py
examples/: Untitled.ipynb  bakeoff_sample_data.jsonl  binary_sample_data.jsonl  quickstart.ipynb  requirements.txt  responses_api_example.py
melodi/: __init__.py  api.py  base_client.py  braintrust_reporter.py  data_models.py  exceptions.py  logging.py  melodi_client.py
melodi/experiments/: data_models.py  experiments_client.py
melodi/feedback/: data_models.py  feedback_client.py
melodi/intents/: data_models.py  intents_client.py
melodi/issues/: data_models.py  issues_client.py
melodi/messages/: data_models.py  messages_client.py
melodi/projects/: data_models.py  projects_client.py
melodi/threads/: data_models.py  threads_client.py
melodi/user_internal_for_project/: data_models.py  user_internal_for_project_client.py
melodi/user_segment_types/: data_models.py  user_segment_types_client.py
melodi/users/: data_models.py  user_client.py
melodi/utils/: openai.py  openai_nonstream_extractor.py  openai_prompt_parser.py  openai_responses_extractor.py  openai_responses_prompt_parser.py  openai_responses_stream_generator.py  openai_stream_generator.py  openai_utils.py  utils.py
test/: conftest.py
test/utils/: test_async_live.py  test_live.py  test_openai_nonstream_extractor.py  test_openai_prompt_parser.py
tests/: test_reporter.py
tests/utils/: live_tests.py  openai_stream_generator_test.py  openai_tests.py
