[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "melodi"
version = "0.1.36a2"
description = "Helper functions for Melodi"
readme = "README.md"
authors = [
    { name = "Melodi Ltd", email = "info@melodi.app" }
]
keywords = ["melodi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "requests",
    "pydantic",
    "email-validator"
]

[project.optional-dependencies]
openai = ["openai", "wrapt", "packaging"]

[tool.setuptools.packages.find]
where = ["."]
include = ["melodi*"]
exclude = ["test*"] 